test for compiler feature needed for ML-KEM
The ML-KEM implementation we uses need the compiler to support
C99-style named struct initialisers (e.g foo = {.bar = 1}). We
still support (barely) building OpenSSH with older compilers, so
add a configure test for this.

--- a/configure.ac
+++ b/configure.ac
@@ -353,6 +353,19 @@ AC_COMPILE_IFELSE(
     [ AC_MSG_RESULT([no]) ]
 )
 
+AC_MSG_CHECKING([if compiler supports named struct initialisers])
+AC_COMPILE_IFELSE(
+    [AC_LANG_PROGRAM([[#include <stdlib.h>]],
+    [[	struct foo { int bar; int baz; };
+	struct foo blerg = {.bar = 1, .baz = 2};
+	exit((blerg.bar == 1 && blerg.baz == 2) ? 0 : 1);
+    ]])],
+    [ AC_MSG_RESULT([yes])
+      AC_DEFINE(NAMED_STRUCT_INITIALISERS, [1],
+	 [compiler supports named struct initializers]) ],
+    [ AC_MSG_RESULT([no]) ]
+)
+
 AC_MSG_CHECKING([if compiler accepts variable declarations after code])
 AC_COMPILE_IFELSE(
     [AC_LANG_PROGRAM([[#include <stdlib.h>]],
