fix previous; check for C99 compound literals
The previous commit was incorrect (or at least insufficient), the
ML-KEM code is actually using compound literals, so test for them.

--- a/configure.ac
+++ b/configure.ac
@@ -353,16 +353,17 @@ AC_COMPILE_IFELSE(
     [ AC_MSG_RESULT([no]) ]
 )
 
-AC_MSG_CHECKING([if compiler supports named struct initialisers])
+AC_MSG_CHECKING([if compiler supports compound literals])
 AC_COMPILE_IFELSE(
     [AC_LANG_PROGRAM([[#include <stdlib.h>]],
-    [[	struct foo { int bar; int baz; };
-	struct foo blerg = {.bar = 1, .baz = 2};
-	exit((blerg.bar == 1 && blerg.baz == 2) ? 0 : 1);
+    [[  struct foo { int bar; int baz; };
+        void *fooc = &(struct foo){.bar = 1, .baz = 2};
+        struct foo *foo2 = (struct foo *)fooc;
+        return (foo2->bar == 1 && foo2->baz == 2) ? 0 : 1;
     ]])],
     [ AC_MSG_RESULT([yes])
-      AC_DEFINE(NAMED_STRUCT_INITIALISERS, [1],
-	 [compiler supports named struct initializers]) ],
+      AC_DEFINE(COMPOUND_LITERALS, [1],
+	 [compiler supports compound literals]) ],
     [ AC_MSG_RESULT([no]) ]
 )
 
